--- a/web sitem/iletisim.css
+++ b/web sitem/iletisim.css
@@ -8,28 +8,21 @@ a{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
     font-size: larger;
 }
-
+form{
+    margin-left: 30px;
+ color: black;
+   background: transparent;
+   font-weight: bold;
+  
+}
+h3{
+   padding-top: 10px;
+    margin-left: 30px;
+    color: black;
+   
+}
 body{
     background-image:url(img/forest-3622519_1920.jpg);
     background-size: cover;
-   
     
-   
 }
-
-/*img.img-fluid {
-    width: 100%;
-    height: auto;
-
-}*/
-
-
-h1{
-    
-    left: 450px;
-    top: 300px;
-    position: absolute;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
-
-}
-
