--- a/web sitem/index.css
+++ b/web sitem/index.css
@@ -9,7 +9,7 @@ a{
     font-size: larger;
 }
 
-body{
+/*body{
     background-image:url(img/forest-3622519_1920.jpg);
     background-size: cover;
    
@@ -23,13 +23,39 @@ body{
 
 }*/
 
+body {
+    background-image: url(img/forest-3622519_1920.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0; /* Alt ve üst boşlukları kaldırır */
+    padding: 0; /* Kenar boşluklarını kaldırır */
+    height: 100vh; /* Ekran yüksekliği kadar alan kaplar */
+    
+}
 
-h1{
+
+
+
+/*h1{
     
     left: 450px;
     top: 300px;
     position: absolute;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
 
+}*/
+h1 {
+    font-size: 3em; /* Başlık font boyutu */
+    text-align: center; /* Başlık metnini yatayda merkeze hizalar */
+    position: absolute; /* Mutlak konumlandırma */
+    bottom: 300px; /* Alt kenara olan mesafe */
+    left: 50%; /* Sol kenara göre yatayda merkeze hizalar */
+    transform: translateX(-50%); /* Yatayda merkezlemek için */
 }
 
+@media (max-width: 768px) {
+    h1 {
+        font-size: 2em; /* Küçük ekranlarda başlık font boyutunu küçültür */
+    }
+}
