--- a/web sitem/ozgecmis.css
+++ b/web sitem/ozgecmis.css
@@ -5,7 +5,11 @@ h1 {
 .row {
     margin-top: 40px; /* Satırlar arasında boşluk bırakır */
 }
+a{
 
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+    font-size: larger;
+}
 .col-lg-6 {
     padding: 20px; /* Sütunlarda iç boşluk bırakır */
     background-color: #f8f9fa; /* Sütunların arka plan rengini belirler */
@@ -16,7 +20,7 @@ h1 {
 
 @media (max-width: 768px) {
     .col-lg-6 {
-        width: 100%; /* Küçük ekranlarda sütunların genişliğini ayarlar */
+        width: 100%; 
     }
 }
 body {
@@ -24,8 +28,8 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    margin: 0; /* Alt ve üst boşlukları kaldırır */
-    padding: 0; /* Kenar boşluklarını kaldırır */
+    margin: 0; 
+    padding: 0; 
      
     
 }
