--- a/web sitem/ilgialanı.css
+++ b/web sitem/ilgialanı.css
@@ -1,3 +1,11 @@
+h2{
+    padding: 30px;
+    text-align: center;
+}
+#listele{
+    font-size: large;
+    
+}
 .row{
     padding: 10;
     
@@ -8,7 +16,6 @@ a{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
     font-size: larger;
 }
-
 body {
     background-image: url(img/forest-3622519_1920.jpg);
     background-size: cover;
@@ -19,24 +26,12 @@ body {
      
     
 }
-.col-lg-4 {
+.col-lg-12 {
     padding: 20px; /* Sütunlarda iç boşluk bırakır */
     background-color: #f8f9fa; /* Sütunların arka plan rengini belirler */
     border-radius: 5px; /* Sütunlara yuvarlak köşe ekler */
     margin-bottom: 20px; /* Sütunların altında boşluk bırakır */
    
-}
-.col-lg-8 {
-    padding: 20px; /* Sütunlarda iç boşluk bırakır */
-    background-color: #f8f9fa; /* Sütunların arka plan rengini belirler */
-    border-radius: 5px; /* Sütunlara yuvarlak köşe ekler */
-    margin-bottom: 20px; /* Sütunların altında boşluk bırakır */
-   
-}
-@media (max-width: 768px) {
-    .col-lg-6 {
-        width: 100%; 
-    }
 }
 .container {
     min-height: 50vh; /* Ekran yüksekliğinin yarısı kadar alan kaplar */
