--- a/web sitem/hakkımda.css
+++ b/web sitem/hakkımda.css
@@ -1,14 +1,18 @@
-.row{
-    padding: 10;
-    
+.row {
+    margin-top: 40px; /* Satırlar arasında boşluk bırakır */
 }
-
 a{
 
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
     font-size: larger;
 }
-
+.col-lg-6 {
+    padding: 20px; /* Sütunlarda iç boşluk bırakır */
+    background-color: #f8f9fa; /* Sütunların arka plan rengini belirler */
+    border-radius: 5px; /* Sütunlara yuvarlak köşe ekler */
+    margin-bottom: 20px; /* Sütunların altında boşluk bırakır */
+   
+}
 body {
     background-image: url(img/forest-3622519_1920.jpg);
     background-size: cover;
@@ -19,25 +23,26 @@ body {
      
     
 }
-.col-lg-4 {
-    padding: 20px; /* Sütunlarda iç boşluk bırakır */
-    background-color: #f8f9fa; /* Sütunların arka plan rengini belirler */
-    border-radius: 5px; /* Sütunlara yuvarlak köşe ekler */
-    margin-bottom: 20px; /* Sütunların altında boşluk bırakır */
-   
-}
-.col-lg-8 {
-    padding: 20px; /* Sütunlarda iç boşluk bırakır */
-    background-color: #f8f9fa; /* Sütunların arka plan rengini belirler */
-    border-radius: 5px; /* Sütunlara yuvarlak köşe ekler */
-    margin-bottom: 20px; /* Sütunların altında boşluk bırakır */
-   
-}
-@media (max-width: 768px) {
-    .col-lg-6 {
-        width: 100%; 
-    }
-}
 .container {
     min-height: 50vh; /* Ekran yüksekliğinin yarısı kadar alan kaplar */
 }
+.col-lg-12 {
+    padding: 20px; /* Sütunlarda iç boşluk bırakır */
+    background-color: #f8f9fa; /* Sütunların arka plan rengini belirler */
+    border-radius: 5px; /* Sütunlara yuvarlak köşe ekler */
+    margin-bottom: 20px; /* Sütunların altında boşluk bırakır */
+   
+}
+h1 {
+    text-align: center; 
+}
+.img-yeni img {
+    max-width: 100%; /* Resmin maksimum genişliğini ayarla */
+    max-height: 300px; /* Resmin maksimum yüksekliğini ayarla */
+    display:block; /* Resmi blok öğe olarak ayarla */
+    margin: 0 auto; /* Resmi yatayda merkezle */
+    border-radius: 5px;
+    
+    
+}
+
