--- a/web sitem/şehrim.css
+++ b/web sitem/şehrim.css
@@ -1,6 +1,6 @@
 
 .row {
-  margin-top: 40px; /* Satırlar arasında boşluk bırakır */
+  margin-top: 40px; 
 }
 
 a {
@@ -9,10 +9,10 @@ a {
 }
 
 .col-lg-12 {
-  padding: 20px; /* Sütunlarda iç boşluk bırakır */
-  background-color: #f8f9fa; /* Sütunların arka plan rengini belirler */
-  border-radius: 5px; /* Sütunlara yuvarlak köşe ekler */
-  margin-bottom: 20px; /* Sütunların altında boşluk bırakır */
+  padding: 20px; 
+  background-color: #f8f9fa; 
+  border-radius: 5px; 
+  margin-bottom: 20px; 
 }
 
 body {
@@ -25,7 +25,7 @@ body {
 }
 
 .container {
-  min-height: 50vh; /* Ekran yüksekliğinin yarısı kadar alan kaplar */
+  min-height: 50vh; 
 }
 
 h1 {
@@ -33,8 +33,8 @@ h1 {
 }
 
 .carousel {
-  max-width: 600px; /* Slider'ın maksimum genişliğini ayarlar */
-  margin: auto; /* Slider'ı ortalar */
+  max-width: 600px; 
+  margin: auto; 
 }
 
 .carousel img {
