--- a/web sitem/login.css
+++ b/web sitem/login.css
@@ -17,22 +17,22 @@ body {
     background-position: center;
     margin: 0; 
     padding: 0; 
-    height: 100vh; /* Ekran yüksekliği kadar alan kaplar */
+    height: 100vh; 
     
 }
 
 h1 {
     font-size: 3em; 
     text-align: center; 
-    position: absolute; /* Mutlak konumlandırma */
-    bottom: 300px; /* Alt kenara olan mesafe */
-    left: 50%; /* Sol kenara göre yatayda merkeze hizalar */
-    transform: translateX(-50%); /* Yatayda merkezlemek için */
+    position: absolute; 
+    bottom: 300px; 
+    left: 50%; 
+    transform: translateX(-50%); 
 }
 
 @media (max-width: 768px) {
     h1 {
-        font-size: 2em; /* Küçük ekranlarda başlık font boyutunu küçültür */
+        font-size: 2em; 
     }
 }
 
