--- a/web sitem/mirasımız.css
+++ b/web sitem/mirasımız.css
@@ -1,5 +1,5 @@
 .row {
-    margin-top: 40px; /* Satırlar arasında boşluk bırakır */
+    margin-top: 40px; 
 }
 a{
 
@@ -7,10 +7,10 @@ a{
     font-size: larger;
 }
 .col-lg-6 {
-    padding: 20px; /* Sütunlarda iç boşluk bırakır */
-    background-color: #f8f9fa; /* Sütunların arka plan rengini belirler */
-    border-radius: 5px; /* Sütunlara yuvarlak köşe ekler */
-    margin-bottom: 20px; /* Sütunların altında boşluk bırakır */
+    padding: 20px; 
+    background-color: #f8f9fa; 
+    border-radius: 5px; 
+    margin-bottom: 20px; 
    
 }
 body {
@@ -24,23 +24,23 @@ body {
     
 }
 .container {
-    min-height: 50vh; /* Ekran yüksekliğinin yarısı kadar alan kaplar */
+    min-height: 50vh; 
 }
 .col-lg-12 {
-    padding: 20px; /* Sütunlarda iç boşluk bırakır */
-    background-color: #f8f9fa; /* Sütunların arka plan rengini belirler */
-    border-radius: 5px; /* Sütunlara yuvarlak köşe ekler */
-    margin-bottom: 20px; /* Sütunların altında boşluk bırakır */
+    padding: 20px; 
+    background-color: #f8f9fa; 
+    border-radius: 5px; 
+    margin-bottom: 20px; 
    
 }
 h1 {
     text-align: center; 
 }
 .img-yeni img {
-    max-width: 100%; /* Resmin maksimum genişliğini ayarla */
-    max-height: 300px; /* Resmin maksimum yüksekliğini ayarla */
-    display:block; /* Resmi blok öğe olarak ayarla */
-    margin: 0 auto; /* Resmi yatayda merkezle */
+    max-width: 100%; 
+    max-height: 300px; 
+    display:block; 
+    margin: 0 auto; 
     border-radius: 5px;
     
     
